--- a/idex.html
+++ b/idex.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>cursos gratis</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
-            <p>Texto do artigo</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo excepturi in corrupti omnis, labore molestias accusamus natus eaque nihil nisi. Maiores, tenetur fuga facilis esse repellat sunt. Quas, mollitia non.</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
+            <h2>curso de javascript</h2>
             <p>texto artigo 002</p>
         </article>
     </main>
